# test-copier-propagation

./: .copier-answers.yml  Dockerfile  README.md  pyproject.toml
tests/: main_test.py
